tests/NormalTests/paczka2/big_fuzzy/71313763.err
Error in line 1: WRLRQqz S611 35,1
Error in line 5: WRLRQqz S350 93,7
Error in line 8: ZYzaOF A918 67,3
Error in line 30: I9CBgiYgR S611 89,6
Error in line 34: I9CBgiYgR A894 74,9
Error in line 29: S350 A918 55,2
Error in line 35: pVF1 S350 98,8
Error in line 49: WRLRQqz A918 98,32
Error in line 73: I9CBgiYgR S611 3,0
Error in line 64: pVF1 A894 40,5
Error in line 78: pVF1 A918 46,4
Error in line 74: I9CBgiYgR A918 9,8
Error in line 90: WRLRQqz S350 47,2
Error in line 87: I9CBgiYgR S350 76,8
Error in line 94: WRLRQqz S611 38,1
Error in line 99: WRLRQqz S350 18,5
Error in line 105: S350 A894 19,1
Error in line 111: S350 S350 20,4
Error in line 122: iDigXgIe A918 46,0
Error in line 124: iDigXgIe A894 30,1
Error in line 127: befSa S350 73,3
Error in line 130: S350 A918 0,6
Error in line 129: befSa A894 9,9
Error in line 134: S350 S350 90,4
Error in line 143: ZYzaOF S350 110,5
Error in line 146: S350 S611 97,4
Error in line 148: I9CBgiYgR S350 99,5
Error in line 160: S350 S611 30,3
Error in line 166: iDigXgIe A918 41,1
Error in line 125: pVF1 A894 7,8
Error in line 182: WRLRQqz A918 -1,0
Error in line 178: pVF1 A918 94,9
Error in line 194: ZYzaOF A894 25,3
Error in line 199: iDigXgIe A918 120,7
Error in line 207: befSa A918 102,28
Error in line 217: I9CBgiYgR A894 4e,0
Error in line 213: I9CBgiYgR A894 32,5
Error in line 221: iDigXgIe S611 51,9
Error in line 229: iDigXgIe A894 -3,7
Error in line 233: I9CBgiYgR A918 37,4
Error in line 236: WRLRQqz S611 96,8
Error in line 225: iDigXgIe A894 57,1
